Archive/php_ingress_nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ingress-nginx-controller-wait
  namespace: ingress-nginx
spec:
  containers:
    - name: wait
      image: bitnami/kubectl
      command: ["sh", "-c", "kubectl wait --namespace ingress-nginx --for=condition=ready pod --selector=app.kubernetes.io/component=controller --timeout=120s"]
  restartPolicy: Never
