Archive/php_expose.yaml
apiVersion: v1
kind: Service
metadata:
  name: dm-hw20-php-service
  labels:
    tier: backend
spec:
  selector:
    app: php
    tier: backend
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30002  # You can choose any port number between 30000 and 32767
